fix button break on error page

--- a/themes/bix/sass/_error-page.scss
+++ b/themes/bix/sass/_error-page.scss
@@ -3,12 +3,12 @@
 --------------------------------------------------------------*/
 
 .error-404 {
-	width: 80%;
+	width: 96%;
 	padding: 3rem 4rem;
 	border: 1px solid rgba(0,0,0,0.3);
 	margin: 4rem auto;
 	span{
-		color: $color__orange;		
+		color: $color__orange;
 	}
 }
 
